neutron/neutron/templates/deployment-server.yaml
---
# Source: neutron/templates/deployment-server.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neutron-server
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: neutron
    component: server
spec:
  replicas: 2
  selector:
    matchLabels:
      release_group: release-name
      application: neutron
      component: server
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: neutron
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "1b3ace5e702c60a105a93243c9d464bacd79a08052ef85712239aa8dffab8875"
        configmap-etc-hash: "9ff8d758095dd49bd6752f08485ec332faa249b24eb2ecca329784e013fab049"
        
    spec:
      securityContext:
        runAsUser: 42424
        
      serviceAccountName: neutron-server
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - neutron
                  - key: component
                    operator: In
                    values:
                    - server
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: neutron-server
          image: "docker.io/openstackhelm/neutron:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            
          readinessProbe:
            tcpSocket:
              port: 9696
          
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: 9696
          
          command:
            - /tmp/neutron-server.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/neutron-server.sh
                  - stop
          ports:
            - name: q-api
              containerPort: 9696
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-var-neutron
              mountPath: /var/lib/neutron
            - name: neutron-bin
              mountPath: /tmp/neutron-server.sh
              subPath: neutron-server.sh
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/neutron.conf
              subPath: neutron.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/plugins/ml2/ml2_conf.ini
              subPath: ml2_conf.ini
              readOnly: true
            
            - name: neutron-etc
              mountPath: /etc/neutron/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/policy.json
              subPath: policy.json
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-var-neutron
          emptyDir: {}
        - name: neutron-bin
          configMap:
            name: neutron-bin
            defaultMode: 0555
        - name: neutron-etc
          secret:
            secretName: neutron-etc
            defaultMode: 0444
