neutron/neutron/templates/ingress-server.yaml
---
# Source: neutron/templates/ingress-server.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neutron
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: neutron
      http:
        paths:
          - path: /
            backend:
              serviceName: neutron-server
              servicePort: q-api
    - host: neutron.openstack
      http:
        paths:
          - path: /
            backend:
              serviceName: neutron-server
              servicePort: q-api
    - host: neutron.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: neutron-server
              servicePort: q-api
